--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-VITE_API_URL=https://api.midominio.com
-VITE_SUPABASE_URL=https://xxxx.supabase.co
-VITE_SUPABASE_KEY=public-anon-key
+VITE_AUTH0_DOMAIN=
+VITE_AUTH0_CLIENT_ID=
+VITE_AUTH0_AUDIENCE=
+VITE_AUTH0_REDIRECT_URI=
+VITE_API_URL=
