--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
         run: npm run lint --if-present
 
       - name: Test (if present)
-        run: npm run test:run --if present
+        run: npm run test:run
 
       - name: Build
         run: npm run build
